Updated styling on login/signup so text is more visible also fixed terminator styling

--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -231,7 +231,7 @@
 #terminator-image {
     position: absolute;
     bottom: 0px;
-    width: 1200px;
+    width: 1000px;
     margin:auto;
     z-index: 10;
     opacity: 0;
